--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,40 +2,31 @@ version: "3.8"
 services:
   redis:
     image: redis:7-alpine
-    restart: unless-stopped
-    volumes:
-      - redis_data:/data
+    ports:
+      - "6379:6379"
 
   api:
     build: .
-    restart: unless-stopped
     environment:
       - REDIS_URL=redis://redis:6379/0
     env_file:
       - .env
+    volumes:
+      - ./:/app
     ports:
       - "8000:8000"
+    command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
     depends_on:
       - redis
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
 
   worker:
     build: .
-    restart: unless-stopped
     environment:
       - REDIS_URL=redis://redis:6379/0
     env_file:
       - .env
+    volumes:
+      - ./:/app
     command: ["python", "-m", "app.worker"]
     depends_on:
       - redis
-
-volumes:
-  redis_data:
-
-
-
