--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,8 @@ services:
       - .env
     expose:
       - "8000"
+    labels:
+      - "coolify.managed=true"
     depends_on:
       - redis
     healthcheck:
