Add YouTube transcript scraping and analysis endpoints
Introduces new API endpoints for scraping and analyzing YouTube video transcripts using yt-dlp, youtube-transcript-api, and Crawl4AI as fallbacks. Adds a structured schema for YouTube transcript summaries, implements transcript extraction logic, and integrates Gemini-based analysis. Updates requirements with yt-dlp and youtube-transcript-api, exposes port 8000 in docker-compose, and adds a test script for the new endpoint.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,3 @@
-version: "3.8"
 services:
   redis:
     image: redis:7-alpine
@@ -13,8 +12,8 @@ services:
       - REDIS_URL=redis://redis:6379/0
     env_file:
       - .env
-    expose:
-      - "8000"
+    ports:
+      - "8000:8000"
     labels:
       - "coolify.managed=true"
     depends_on:
