--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ beautifulsoup4==4.12.3
 crawl4ai==0.7.8
 google-genai==0.2.2
 psutil==6.1.1
+youtube-transcript-api==0.6.2
+yt-dlp==2024.12.13
 
 
 
