Replace ports with expose for app service
Changed the app service in docker-compose.yaml to use 'expose' instead of 'ports' for port 8000. This makes the port available to linked services but not published to the host.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,8 +12,8 @@ services:
       - REDIS_URL=redis://redis:6379/0
     env_file:
       - .env
-    ports:
-      - "8000:8000"
+    expose:
+      - "8000"
     labels:
       - "coolify.managed=true"
     depends_on:
